2014-06-17  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r170058.
        https://bugs.webkit.org/show_bug.cgi?id=133993

        Caused 4 webkitpy failures on the bots (Requested by bradee-oh
        on #webkit).

        Reverted changeset:

        "[GTK] Fix the handling of resize events after r169505."
        https://bugs.webkit.org/show_bug.cgi?id=133517
        http://trac.webkit.org/changeset/170058

2014-06-17  Rebecca Hauck  <rhauck@adobe.com>

        Update import-w3c-tests to reflect current W3C test repo directory structure
        https://bugs.webkit.org/show_bug.cgi?id=133460

        Reviewed by Bem Jones-Bey.

        Removed all references to test status, which are no longer reflected in the
        directory names in the W3C CSS test repo.  No tests are required for this 
        change, the existing tests pass.

        * Scripts/webkitpy/w3c/test_importer.py:
        (main):
        (TestImporter.__init__):
        (TestImporter.find_importable_tests):
        (TestImporter.setup_destination_directory):
        (TestImporter.write_import_log):
        (TestImporter.update_test_status): Deleted.

2014-06-17  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] Fix the handling of resize events after r169505.
        https://bugs.webkit.org/show_bug.cgi?id=133517

        Reviewed by Martin Robinson.

        * Scripts/webkitpy/port/xvfbdriver.py:
        (XvfbDriver._start): Set the resolution of Xvfb to XGA (1024x768).
        The tests css3/viewport-percentage-lengths/viewport-percentage-lengths-*.html
        need at least 900x640 pixels to pass.
        * WebKitTestRunner/gtk/PlatformWebViewGtk.cpp:
        (WTR::PlatformWebView::PlatformWebView): gtk_widget_size_allocate should
        be requested over the main widget instead of the window.
        (WTR::PlatformWebView::resizeTo): Changed this to call setWindowFrame like
        the Mac port.