@@ -1777,6 +1777,15 @@
             "mpcomplete@chromium.org"
          ]
       },
+      "Matthew Mirman" : {
+         "emails" : [
+            "mmirman@apple.com"
+         ],
+         "expertise" : "JavaScript/ECMAScript",
+         "nicks" : [
+            "mmirman"
+         ]
+      },
       "Max Vujovic" : {
          "emails" : [
             "mvujovic@adobe.com",
