@@ -1,3 +1,9 @@
+2014-06-17  Matthew Mirman <mmirman@apple.com>
+
+        Unreviewed. Added myself to list of contributors.
+
+        * Scripts/webkitpy/common/config/contributors.json: Added myself.
+
 2014-06-17  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r170058.
